# platform

./: .env.server.example  Cargo.toml  Dockerfile  Dockerfile.full  Dockerfile.server  README.md  docker-compose.server.yml  docker-compose.yml
.githooks/: pre-push
.github/workflows/: ci.yml
bins/csudo/: Cargo.toml
bins/csudo/src/: main.rs
bins/platform/: Cargo.toml
bins/platform/src/: main.rs  server.rs  validator.rs
bins/validator-node/: Cargo.toml
bins/validator-node/src/: lib.rs  main.rs
crates/auto-updater/src/: updater.rs  version.rs  watcher.rs
crates/bittensor-integration/examples/: check_metagraph.rs
crates/bittensor-integration/src/: lib.rs  validator_sync.rs  weights.rs
crates/challenge-orchestrator/: Cargo.toml
crates/challenge-orchestrator/src/: backend.rs  config.rs  docker.rs  evaluator.rs  health.rs  lib.rs  lifecycle.rs
crates/challenge-runtime/src/: weight_calculator.rs
crates/challenge-sdk/: Cargo.toml
crates/challenge-sdk/src/: error.rs  lib.rs  platform_client.rs  routes.rs  server.rs  test_challenge.rs  types.rs  weights.rs
crates/consensus/src/: governance_integration.rs  pbft.rs  stake_governance.rs  stake_weighted_pbft.rs  state.rs
crates/core/src/: schema_guard.rs
crates/epoch/src/: aggregator.rs  commit_reveal.rs  lib.rs  mechanism_weights.rs
crates/network/src/: behaviour.rs  node.rs
crates/platform-server/: Cargo.toml
crates/platform-server/src/: challenge_proxy.rs  data_api.rs  lib.rs  main.rs  observability.rs  orchestration.rs  rule_engine.rs  state.rs
crates/platform-server/src/api/: auth.rs  bridge.rs  challenges.rs  evaluations.rs  events.rs  leaderboard.rs  mod.rs  submissions.rs  validators.rs
crates/platform-server/src/db/: mod.rs  queries.rs  schema.rs
crates/platform-server/src/models/: mod.rs
crates/platform-server/src/websocket/: events.rs  handler.rs  mod.rs
crates/rpc-server/src/: jsonrpc.rs
crates/secure-container-runtime/: Cargo.toml
crates/secure-container-runtime/src/: broker.rs  lib.rs  protocol.rs  types.rs  ws_client.rs  ws_transport.rs
crates/subnet-manager/src/: config.rs
docker/: Dockerfile.challenge  Dockerfile.validator
tests/: e2e_test.rs
