[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/network",
    "crates/consensus",
    "crates/storage",
    "crates/challenge-sdk",
    "crates/epoch",
    "crates/challenge-runtime",
    "crates/bittensor-integration",
    "crates/subnet-manager",
    "crates/rpc-server",
    "crates/challenge-orchestrator",
    "crates/auto-updater",
    "crates/distributed-db",
    "crates/secure-container-runtime",
    "crates/platform-server",
    "bins/platform",
    "bins/validator-node",
    "bins/csudo",
    "bins/utils",
    "tests",
]
# Note: Challenges are in separate repositories and import platform-challenge-sdk as a git dependency
# Note: WASM runtime removed - updates via git, version checked at handshake

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Platform Network"]
license = "Apache-2.0"

[workspace.dependencies]
# Bittensor (with CRv4 timelock encryption support and new Subtensor API)
# Updated to 453ce56: proper SCALE decoding for stake (includes parent inheritance)
bittensor-rs = { git = "https://github.com/CortexLM/bittensor-rs", rev = "453ce56" }

# Async runtime
tokio = { version = "1.40", features = ["full", "sync", "macros", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
sp-core = "38.1.0"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }

# P2P Networking
libp2p = { version = "0.54", features = ["tokio", "noise", "yamux", "tcp", "dns", "gossipsub", "mdns", "request-response", "macros", "identify", "cbor", "serde"] }

# Storage
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error monitoring (optional - enabled via SENTRY_DSN env var)
sentry = { version = "0.35", default-features = false, features = ["backtrace", "contexts", "tracing", "reqwest", "rustls"] }
sentry-tracing = "0.35"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
tempfile = "3.12"

# HTTP/Web (for platform-server)
reqwest = { version = "0.12", features = ["json"] }

# Patch for TLE/CRv4 compatibility (w3f-bls version conflict)
[patch.crates-io]
w3f-bls = { git = "https://github.com/opentensor/bls", branch = "fix-no-std" }

# Clippy lints configuration
[workspace.lints.clippy]
# Allow these patterns that are intentional in this codebase
too_many_arguments = "allow"
large_enum_variant = "allow"
type_complexity = "allow"
await_holding_lock = "warn"  # TODO: Fix async lock issues properly
collapsible_match = "allow"
collapsible_if = "allow"
