[package]
name = "csudo"
version.workspace = true
edition.workspace = true
description = "Chain sudo tool for subnet owners"

[[bin]]
name = "csudo"
path = "src/main.rs"

[dependencies]
platform-core = { path = "../../crates/core" }
platform-network = { path = "../../crates/network" }
platform-consensus = { path = "../../crates/consensus" }
platform-storage = { path = "../../crates/storage" }

tokio = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true, features = ["env"] }
anyhow = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Beautiful CLI
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
colored = "2.1"
comfy-table = "7.1"
