[package]
name = "csudo"
version.workspace = true
edition.workspace = true
description = "Chain sudo tool for subnet owners"

[[bin]]
name = "csudo"
path = "src/main.rs"

[dependencies]
platform-core = { path = "../../crates/core" }

tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

clap = { workspace = true, features = ["env"] }
anyhow = { workspace = true }
hex = { workspace = true }
sp-core = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

# CLI formatting
colored = "2.1"
comfy-table = "7.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
