[package]
name = "platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Platform Network - Unified binary for server and validator modes"

[[bin]]
name = "platform"
path = "src/main.rs"

[dependencies]
# Core dependencies
platform-core = { path = "../../crates/core" }
platform-server = { path = "../../crates/platform-server" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client (for platform-server client)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error monitoring
sentry = { workspace = true }

# HTTP server (must match platform-server version)
axum = { version = "0.7", features = ["ws", "json", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Challenge orchestration
challenge-orchestrator = { path = "../../crates/challenge-orchestrator" }

# Validator dependencies (conditional compilation could be used for smaller binary)
platform-network = { path = "../../crates/network" }
platform-consensus = { path = "../../crates/consensus" }
platform-storage = { path = "../../crates/storage" }
platform-epoch = { path = "../../crates/epoch" }
platform-challenge-runtime = { path = "../../crates/challenge-runtime" }
platform-bittensor = { path = "../../crates/bittensor-integration" }
platform-subnet-manager = { path = "../../crates/subnet-manager" }
platform-rpc = { path = "../../crates/rpc-server" }
distributed-db = { path = "../../crates/distributed-db" }
secure-container-runtime = { path = "../../crates/secure-container-runtime" }

# Utils
parking_lot = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
which = "7.0"
