[package]
name = "validator-node"
version.workspace = true
edition.workspace = true

[lib]
name = "validator_node"
path = "src/lib.rs"

[[bin]]
name = "validator-node"
path = "src/main.rs"

[dependencies]
# Platform crates
platform-core = { path = "../../crates/core" }
platform-storage = { path = "../../crates/storage" }
platform-bittensor = { path = "../../crates/bittensor-integration" }
platform-rpc = { path = "../../crates/rpc-server" }
platform-subnet-manager = { path = "../../crates/subnet-manager" }
challenge-orchestrator = { path = "../../crates/challenge-orchestrator" }
secure-container-runtime = { path = "../../crates/secure-container-runtime" }

# Bittensor (for weight submission)
bittensor-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for platform-server
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true, features = ["env"] }
anyhow = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
sp-core = { workspace = true }
