[package]
name = "platform-challenge-sdk"
version.workspace = true
edition.workspace = true
description = "SDK for developing challenges on Platform Network"

[features]
default = []
# Enable HTTP server mode (requires axum)
http-server = ["axum", "tower", "tower-http"]
# Legacy P2P support (deprecated)
p2p = []

[dependencies]
platform-core = { path = "../core" }

# Async
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Web server (optional, for http-server feature)
axum = { version = "0.7", features = ["ws", "json"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Database (each challenge gets its own)
sled = { workspace = true }

# Crypto
sha2 = { workspace = true }
hex = { workspace = true }
sp-core = { workspace = true }
parity-scale-codec = { workspace = true }
aes-gcm = "0.10"
rand = { workspace = true }
chacha20poly1305 = "0.10"

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
