[package]
name = "platform-server"
version.workspace = true
edition.workspace = true
description = "Central API Server for Platform Network - Manages challenges, submissions, and evaluations"
authors.workspace = true
license.workspace = true

[[bin]]
name = "platform-server"
path = "src/main.rs"

[dependencies]
platform-core = { path = "../core" }
platform-challenge-sdk = { path = "../challenge-sdk" }
challenge-orchestrator = { path = "../challenge-orchestrator" }

# Web framework
axum = { version = "0.7", features = ["ws", "json", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures = { workspace = true }
async-trait = { workspace = true }

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["with-serde_json-1"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (sr25519 signatures)
sp-core = { workspace = true }
hex = { workspace = true }
bs58 = "0.5"

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error monitoring (optional - enabled via SENTRY_DSN env var)
sentry = { workspace = true }
sentry-tracing = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP client (for challenge proxy)
reqwest = { version = "0.12", features = ["json"] }

# Concurrency
parking_lot = { workspace = true }
dashmap = "6.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
