[package]
name = "secure-container-runtime"
version = "0.1.0"
edition = "2021"
description = "Secure container runtime broker - isolates Docker socket access"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "net"] }

# Docker client (only used by broker)
bollard = "0.18"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# UUID for container naming
uuid = { version = "1.11", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto for request signing
sha2 = "0.10"
hex = "0.4"

# WebSocket support
tokio-tungstenite = "0.24"

# JWT authentication
jsonwebtoken = "9"

# Logging (for binary)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "container-broker"
path = "src/bin/container-broker.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
